# clippers

./: .gitignore  Cargo.toml  README.md  Trunk.toml  plan.md  rustfmt.toml
frontend/: Cargo.toml  index.html
frontend/public/: glue.js
frontend/src/: main.rs
libclippers/: Cargo.toml  main.rs  store.rs
libclippers/src/: lib.rs  store.rs  util.rs  win.rs
src/: main.rs  store.rs  util.rs  win.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
