[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde-wasm-bindgen = "0.6.0"
wasm-bindgen = "0.2.87"
web-sys = "0.3.64"
yew = { version = "0.21.0", features = ["csr"] }
